# English-Dictionary-Database

./: Cargo.toml  Dictionary PG.session.sql  Dockerfile  Licence  README.md  SampleTest.session.sql  extract_common_words.py  words.db
Dictionary-Server/: .env  .travis.yml  Cargo.toml  Dictionary PG.session.sql  Dockerfile  docker-compose.yml
Dictionary-Server/assets/: DF_mod.json  DK_mod.json  DM_mod.json  DQ_mod.json  DR_mod.json  DS_mod.json  DT_mod.json  DU_mod.json  DX_mod.json  DY_mod.json  DZ_mod.json
Dictionary-Server/data/: DB.json
Dictionary-Server/src/: database_op.rs  main.rs  models.rs  populate_postgres.rs  routes.rs  schema.rs  tests.rs  vars.rs
Generate_Dictionary_Json/: example.json
assets/: DA_mod.json  DB_mod.json  DC_mod.json  DD_mod.json  DE_mod.json  DG_mod.json  DH_mod.json  DI_mod.json  DJ_mod.json  DL_mod.json  DN_mod.json  DO_mod.json  DP_mod.json  DV_mod.json  DW_mod.json  dict_words.txt  extracts_words.py
data/: DA.json
flutter_intent_dictionary/: README.md  local.properties  pubspec.yaml
flutter_intent_dictionary/assets/: dict_sqlite.py
flutter_intent_dictionary/lib/: main.dart
flutter_intent_dictionary/test/: widget_test.dart
migrations/2021-04-27-160646_definations/: down.sql  up.sql
migrations/2021-05-05-201412_create_meanings/: down.sql
migrations/2022-03-03-013013_create_word_index/: up.sql
src/: database_op.rs  lib.rs  models.rs  routes.rs  schema.rs  tests.rs  vars.rs
utils/json_postgres/: populate_postgres.py
utils/other_tools/: LICENSE  README.md  (+2 more)
web-test/: package-lock.json  package.json
(+16 files in other folders)
