[package]
name = "dictionary_server"
version = "0.1.0"
authors = ["abughalib <abughalib64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
actix-cors="0.6"