[package]
name = "dictionary_server"
version = "0.1.0"
authors = ["abughalib <abughalib64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
actix-rt = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0", features = ["postgres"] }
dotenv = "0.15"
actix-cors = "0.6"
progress_bar = "1.0"
env_logger = "0.10"

[dev-dependencies]
serial_test = "1.0"
